# Async_API_sprint_2

./: .gitignore  Makefile  README.md
apps/etl/: Dockerfile  pyproject.toml
apps/movies/: Dockerfile  cache.py  local_up.sh  pyproject.toml
apps/movies/api/v1/endpoints/: film.py  person.py
apps/movies/services/: deps.py  film.py  genre.py  person.py
apps/movies/storages/: film.py  genre.py  person.py
tests/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  settings.py
tests/fixtures/: common.py  elastic.py  http.py  redis.py
tests/functional/: docker-compose.yml  pyproject.toml
tests/functional/src/: test_search.py
tests/functional/utils/: wait_for_es.py
tests/src/: conftest.py  test_film.py  test_genre.py  test_person.py  test_search.py
tests/testdata/: __init__.py  es_data.py  es_mapping.py  film_mocks.py  genre_mocks.py  person_mocks.py
tests/utils/: __init__.py  helpers.py  mappings.py  wait_for_es.py  wait_for_redis.py
