[tool.poetry]
name = "practicum-tests"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
aiohttp = "^3.7.2"
elasticsearch = "^8.14.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
redis = "^5.0.7"
deepdiff = "^7.0.1"
faker = "^26.0.0"
backoff = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
