[tool.poetry]
name = "practicum-tests"
version = "0.1.0"
description = ""
authors = ["a.v.cherkashin <a.v.cherkashin@tinkoff.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "6.1.2"
pytest-asyncio = "0.12.0"
aiohttp = "3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
